Tue Mar 29 23:14:41 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (common/cvttime.c): Add to SCL build.
	(time/utimes.c): Remove from SCL build.
	(time/calendconv.c): Remove.
	* time/calendconv.c: Remove after merging its contents as inline
	assembler with...
	* time/gmtime_r.c (gmtime_r): ...this and...
	(SWI_Territory_ConvertTimeToUTCOrdinals): Add.
	* time/localtime_r.c (localtime_r): ...this.
	(SWI_Territory_ConvertTimeToOrdinals): Add.
	* incl-local/time.h (__cvt_broken_time): Change return type from void
	to const _kernel_oserror.
	* time/asctime_r.c (asctime_r): Check return value __cvt_broken_time.
	* time/mktime.c (mktime): Likewise.
	* time/strftime.c (strftime): Likewise.
	* time/stdtime.c (__standard_time): Use inline assembler.
	(SWI_Territory_ConvertDateAndTime): Add.
	* time/broken.c (__cvt_broken_time): Use inline assembler.
	(SWI_Territory_ConvertOrdinalsToTime): Add.
	(__cvt_broken_time): Return error if there was one.
	* incl-local/locale.h (__locale_territory, __setlocale_called,
	__build_ctype_tables): Don't prototype these for SCL build.
	* incl-local/internal/os.h (__ul_seterr): Fix outdated comment.

Tue Mar 29 00:52:27 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* incl-local/internal/os.h (__os_cli, __os_byte): Change into inline
	assembler versions.
	* sys/_os.s (__os_cli,__os_bytes): Remove.
	* unix/unix.c (__unixinit, _exit): Follow __os_byte API change.
	* unix/gethostnam.c (fakehostname): Likewise.
	* sys/vfork.c (__fork_post): Likewise.
	* unix/tty.c (__tty_console_gterm, __tty_console_sterm, __ttyicanon):
	Likewise.
	* locale/iconv.c (iconv_open, iconv, iconv_close): Don't use __os_swi
	but use SWI_Iconv_Open, SWI_Iconv_Iconv and SWI_Iconv_Close.
	(SWI_Iconv_Open, SWI_Iconv_Iconv, SWI_Iconv_Close): Add.
	* configure.ac (AC_OUTPUT): Add test/iconv/Makefile.
	* test/iconv/{test-iconv-h.c,signature.h,test-iconv-utf.c,
	test-iconv-h-c++.cc,macros.h,test-iconv.c
	* test/iconv/config.h: Add.