@@ -1,3 +1,9 @@
+Sat Apr  2 02:17:17 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* time/_clock.s (clock): Removed.
+	* time/clock.c (clock): Add.
+	* Makefile.am: Follow changes.
+
 Tue Mar 29 23:14:41 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* Makefile.am (common/cvttime.c): Add to SCL build.
